; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/x509/extr_x509name.c_X509_NAME_add_entry_by_OBJ.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/x509/extr_x509name.c_X509_NAME_add_entry_by_OBJ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X509_NAME_add_entry_by_OBJ(i32* %0, i32* %1, i32 %2, i8* %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %18 = load i32*, i32** %10, align 8
  %19 = load i32, i32* %11, align 4
  %20 = load i8*, i8** %12, align 8
  %21 = load i32, i32* %13, align 4
  %22 = call i32* @X509_NAME_ENTRY_create_by_OBJ(i32* null, i32* %18, i32 %19, i8* %20, i32 %21)
  store i32* %22, i32** %16, align 8
  %23 = load i32*, i32** %16, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %26, label %25

25:                                               ; preds = %7
  store i32 0, i32* %8, align 4
  br label %35

26:                                               ; preds = %7
  %27 = load i32*, i32** %9, align 8
  %28 = load i32*, i32** %16, align 8
  %29 = load i32, i32* %14, align 4
  %30 = load i32, i32* %15, align 4
  %31 = call i32 @X509_NAME_add_entry(i32* %27, i32* %28, i32 %29, i32 %30)
  store i32 %31, i32* %17, align 4
  %32 = load i32*, i32** %16, align 8
  %33 = call i32 @X509_NAME_ENTRY_free(i32* %32)
  %34 = load i32, i32* %17, align 4
  store i32 %34, i32* %8, align 4
  br label %35

35:                                               ; preds = %26, %25
  %36 = load i32, i32* %8, align 4
  ret i32 %36
}

declare dso_local i32* @X509_NAME_ENTRY_create_by_OBJ(i32*, i32*, i32, i8*, i32) #1

declare dso_local i32 @X509_NAME_add_entry(i32*, i32*, i32, i32) #1

declare dso_local i32 @X509_NAME_ENTRY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
